@@ -1,6 +1,11 @@
 2002-11-11  John Levon  <levon@movementarian.org>
 
 	* dae/Makefile.am:
+	* daemon/Makefile.am: don't dist dummy.cpp
+ 
+2002-11-11  John Levon  <levon@movementarian.org>
+
+	* dae/Makefile.am:
 	* daemon/Makefile.am: hack to fix --enable-abi
  
 2002-11-10  John Levon  <levon@movementarian.org>
